# python-starter

./: Makefile  README.md  main.py  pyproject.toml
api/: .gitkeep
config/: .gitkeep
docs/: .gitkeep
entities/: .gitkeep
repositories/: .gitkeep
repositories/model1/: entity.py  repository.py
scripts/: .gitkeep  create_doc.py
server/: .gitkeep
services/: .gitkeep
store/: .gitkeep
tests/: .gitkeep
